# simcore

./: .gitignore  Cargo.toml  LICENSE-MIT  changelog.md  deny.toml  readme.md
.github/workflows/: CI.yml  main.yml
examples/intro/: Cargo.toml  readme.md
examples/intro-async/: Cargo.toml  readme.md
examples/intro-async/src/: main.rs
examples/intro-callbacks/: Cargo.toml  readme.md
examples/intro-callbacks/src/: main.rs
examples/intro/src/: async_mode.rs  callbacks.rs
examples/performance/: Cargo.toml  readme.md
examples/performance/src/: components.rs  main.rs
simcore/: Cargo.toml  readme.md
simcore/src/: context.rs  lib.rs  log.rs
simcore/tests/: lib.rs
simcore/tests/async_tests/: conflict_waiting.rs  recv_event_by_key.rs
src/: handler.rs  lib.rs  log.rs  simulation.rs
src/async_mode/: event_future.rs
tests/async_tests/: future_drop.rs  queue.rs  recv_event.rs  select.rs  sleep.rs
tests/simulation/: event_cancellation.rs
