[package]
name = "performance-example"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
simcore = { path = "../.." }
clap = { version = "3.1.12", features = ["cargo", "derive"] }
env_logger = "0.9.0"
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
sugars = "3.0.0"

[profile.release-debug]
inherits = "release"
debug = true

[profile.release-optimized]
inherits = "release"
codegen-units = 1
lto = "fat"
